Fix pno and lan tolerance alert and conversion factor