@@ -15,6 +15,7 @@
     <description>MonitorFish</description>
 
     <properties>
+        <env.MAVEN_OPTS>--add-opens java.base/java.lang=ALL-UNNAMED</env.MAVEN_OPTS>
         <java.version>17</java.version>
         <spring.version>3.0.1</spring.version>
         <kotlin.version>1.7.21</kotlin.version>
@@ -60,6 +61,16 @@
                     <artifactId>spring-boot-starter-logging</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
         </dependency>
         <dependency>
             <groupId>jakarta.servlet</groupId>
@@ -145,11 +156,6 @@
             <groupId>com.neovisionaries</groupId>
             <artifactId>nv-i18n</artifactId>
             <version>1.29</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.6</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
